--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -28,8 +28,15 @@
 
     --input-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     --button-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-    font-size: 32px;
+    font-size: 80%;
+}
+
+@media (max-width: 750px) {
+    :root {
+        font-size: 60%;
+    }
 }
 
 * {
@@ -38,12 +45,18 @@
     box-sizing: border-box;
 }
 
+.row,
+.col {
+    padding: 0;
+    margin: 0;
+}
+
 html,
 body,
 #root {
     background-color: var(--bg-color);
 
-    min-width: 100vw;
+    width: 100%;
     min-height: 100vh;
 
     display: flex;
@@ -52,7 +65,6 @@ body,
 
     font-family: var(--font-content);
     font-weight: 400;
-    font-size: 65%;
 }
 
 h1,
@@ -61,4 +73,27 @@ h3,
 h4 {
     font-family: var(--font-title);
     font-weight: 400;
+    color: var(--gray-2);
+    padding: 0;
+    margin: 1.5rem 0;
+}
+
+div,
+input,
+textarea,
+select {
+    font-size: 1.5rem;
+}
+
+h1 {
+    font-size: 3rem;
+}
+h2 {
+    font-size: 2rem;
+}
+h3 {
+    font-size: 1.5rem;
+}
+h4 {
+    font-size: 1rem;
 }
