Gernciamento de escola de samba e usuarios

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -97,3 +97,19 @@ h3 {
 h4 {
     font-size: 1rem;
 }
+
+/** --------------------------------------------------------------------------------------------------------------------------
+                                                Notifications
+ -------------------------------------------------------------------------------------------------------------------------- */
+
+.notification-container .title {
+    color: #fff;
+}
+
+/** --------------------------------------------------------------------------------------------------------------------------
+                                                Alert Confirm
+ -------------------------------------------------------------------------------------------------------------------------- */
+
+.react-confirm-alert-overlay {
+    z-index: 100;
+}
