--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -98,6 +98,10 @@ h4 {
     font-size: 1rem;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 /** --------------------------------------------------------------------------------------------------------------------------
                                                 Notifications
  -------------------------------------------------------------------------------------------------------------------------- */
@@ -112,4 +116,30 @@ h4 {
 
 .react-confirm-alert-overlay {
     z-index: 100;
+}
+
+/** --------------------------------------------------------------------------------------------------------------------------
+                                                React Select
+ -------------------------------------------------------------------------------------------------------------------------- */
+
+.css-2b097c-container {
+    width: 100%;
+}
+
+/** --------------------------------------------------------------------------------------------------------------------------
+                                                Drag and Drop
+ -------------------------------------------------------------------------------------------------------------------------- */
+
+.highlight {
+    background-color: var(--purple-6);
+}
+
+.is-dragging {
+    cursor: move;
+    opacity: 0.3;
+}
+
+.over {
+    background-color: var(--green-1);
+    opacity: 0.7;
 }
