--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,6 +10,7 @@
     --gray-3: #808080;
     --gray-4: #bfbfbf;
     --gray-5: #f2f2f2;
+    --gray-6: #dfdfdf;
     --green-1: #69bf13;
     --green-2: #7ee617;
     --green-3: #8fe639;
@@ -20,7 +21,7 @@
     --blue-2: #1728e6;
     --blue-3: #3948e6;
 
-    --bg-color: var(--purple-6);
+    --bg-color: var(--gray-6);
     --color-primary: var(--purple-3);
 
     --font-title: Roboto, sans-serif;
