--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -11,12 +11,14 @@
     --gray-4: #bfbfbf;
     --gray-5: #f2f2f2;
     --gray-6: #dfdfdf;
+    --green: #8bc34a;
     --green-1: #69bf13;
     --green-2: #7ee617;
     --green-3: #8fe639;
     --red-1: #bf1313;
     --red-2: #e61717;
     --red-3: #e63939;
+    --blue: #03a9f4;
     --blue-1: #1321bf;
     --blue-2: #1728e6;
     --blue-3: #3948e6;
@@ -151,14 +153,20 @@ h4 {
                                                 schedule
  -------------------------------------------------------------------------------------------------------------------------- */
 
+.e-schedule {
+    margin-bottom: 5rem;
+}
+
 .e-quick-popup-wrapper {
     position: absolute;
 }
 
 .e-table-container {
-    height: 405px !important;
-
     overflow-y: auto;
+}
+
+.e-content-wrap {
+    height: auto !important;
 }
 
 .e-schedule .e-month-view .e-current-date .e-date-header,
@@ -592,4 +600,13 @@ textarea.e-input::selection,
 
 .mb-1 {
     margin-bottom: 1rem !important;
+}
+
+.open-icon {
+    color: var(--brown);
+    cursor: pointer;
+}
+
+.open-icon:hover {
+    filter: brightness(80%);
 }
