contribuiçao financeira para tarefa

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -23,6 +23,7 @@
     --blue-2: #1728e6;
     --blue-3: #3948e6;
     --brown: #795548;
+    --black: #000;
 
     --bg-color: var(--gray-6);
     --color-primary: var(--purple-3);
